<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".SegundoActivity">

    <TextView
        android:id="@+id/txt_total2"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@color/gris"
        android:padding="10dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_letra"
        app:layout_constraintStart_toStartOf="@+id/txt_gastos2"
        app:layout_constraintTop_toBottomOf="@+id/txt_gastos2" />

    <TextView
        android:id="@+id/txt_gastos2"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@color/gris"
        android:padding="10dp"
        android:text="@string/gastos"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_letra"
        app:layout_constraintEnd_toEndOf="@+id/txt_ingresos2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txt_ingresos2"
        app:layout_constraintTop_toBottomOf="@+id/txt_ingresos2" />

    <TextView
        android:id="@+id/txt_ingresos2"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@color/gris"
        android:padding="10dp"
        android:text="@string/ingresos"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_letra"
        app:layout_constraintEnd_toEndOf="@+id/txt_precio_billete"
        app:layout_constraintStart_toStartOf="@+id/txt_precio_billete"
        app:layout_constraintTop_toBottomOf="@+id/txt_precio_billete" />

    <TextView
        android:id="@+id/txt_num_viajeros2"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gris"
        android:padding="10dp"
        android:text="@string/txt_numero_de_viajeros2"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_letra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_precio_autobus" />

    <TextView
        android:id="@+id/txt_precio_billete"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:background="@color/gris"
        android:padding="10dp"
        android:text="@string/txt_precio_billete"
        android:textColor="@color/black"
        android:textSize="@dimen/tam_letra"
        app:layout_constraintEnd_toEndOf="@+id/txt_num_viajeros2"
        app:layout_constraintStart_toStartOf="@+id/txt_num_viajeros2"
        app:layout_constraintTop_toBottomOf="@+id/txt_num_viajeros2" />

    <EditText
        android:id="@+id/edt_precio_autobus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/txt_precio_autobus"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:onClick="aplicar"
        android:text="@string/bt_aplicar"
        app:layout_constraintBottom_toBottomOf="@+id/edt_precio_autobus"
        app:layout_constraintStart_toEndOf="@+id/edt_precio_autobus"
        app:layout_constraintTop_toTopOf="@+id/edt_precio_autobus"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>